# madballs-ng2

./: .gitattributes  Cargo.toml
assets/: Char@Idle.glb  Char@Walk Forward W Root.glb  Head 01.gltf  Male Knight 01.glb  Male Knight 01.gltf
src/: components.rs  health.rs  main.rs  player.rs  systems.rs  weapon.rs  world.rs
src/player/: mod.rs
src/systems/: damage.rs  despawn_out_of_world_bullets.rs  draw_cursor.rs  health.rs  keyboard_control.rs  look_at_cursor.rs  player_input.rs  shoot_on_click.rs
src/weapon/: components.rs  mod.rs  resources.rs  systems.rs
